--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/react-scroll": "^1.8.7",
     "framer-motion": "^10.12.12",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9",
+    "sass": "^1.62.1",
     "typescript": "5.0.4"
   }
 }
