--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "NODE_ENV=development next dev",
-        "build": "next build",
+        "dev": "next dev",
+        "build": "prisma generate && next build",
         "start": "next start",
         "lint": "next lint",
-        "migrate:run": "dotenv --e .env -- prisma migrate deploy",
-        "migrate:dev": "dotenv --e .env -- prisma migrate dev --name init",
-        "migrate:load": "dotenv --e .env -- prisma migrate dev",
-        "migrate:create": "dotenv --e .env -- prisma migrate dev --create-only"
+        "migrate:run": "prisma migrate deploy",
+        "migrate:dev": "prisma migrate dev --name init",
+        "migrate:load": "prisma migrate dev",
+        "migrate:create": "prisma migrate dev --create-only"
     },
     "dependencies": {
         "@chakra-ui/react": "^2.6.1",
@@ -22,8 +22,6 @@
         "@types/react": "18.2.6",
         "@types/react-dom": "18.2.4",
         "@types/react-scroll": "^1.8.7",
-        "axios": "^1.4.0",
-        "dotenv": "^16.3.1",
         "framer-motion": "^10.12.12",
         "jose": "^4.14.4",
         "next": "13.4.2",
@@ -37,8 +35,5 @@
         "typescript": "5.0.4",
         "zod": "^3.21.4"
     },
-    "devDependencies": {
-        "@types/jsonwebtoken": "^9.0.2",
-        "dotenv-cli": "^7.2.1"
-    }
+    "devDependencies": {}
 }
