--- a/package.json
+++ b/package.json
@@ -19,18 +19,20 @@
         "@prisma/client": "4.15.0",
         "@t3-oss/env-nextjs": "^0.4.1",
         "@types/node": "20.2.1",
+        "@hookform/resolvers": "^3.1.1",
         "@types/react": "18.2.6",
         "@types/react-dom": "18.2.4",
         "@types/react-scroll": "^1.8.7",
         "framer-motion": "^10.12.12",
         "jose": "^4.14.4",
-        "next": "13.4.2",
+        "next": "^13.4.7",
         "next-auth": "^4.22.1",
         "prisma": "^4.15.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.8.0",
         "react-scroll": "^1.8.9",
+        "react-hook-form": "^7.45.1",
         "sass": "^1.62.1",
         "typescript": "5.0.4",
         "zod": "^3.21.4"
